--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "format:check": "prettier --check ."
   },
   "dependencies": {
+    "axios": "^1.5.0",
     "vue": "^3.2.37",
     "vue-router": "^4.1.5"
   },
