--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "axios": "^1.5.0",
+    "lodash-es": "^4.17.21",
     "vue": "^3.2.37",
     "vue-router": "^4.1.5"
   },
